# mcp-mail-bridge

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  mail.rs  main.rs  mcp.rs  permissions.rs  tui.rs
