[package]
name = "mcp-mail-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "=1.0.102"
clap = { version = "=4.6.1", features = ["derive"] }
crossterm = "=0.29.0"
inquire = "=0.9.4"
ratatui = { version = "=0.30.0", default-features = false, features = ["crossterm", "all-widgets"] }
rmcp = { version = "=1.7.0", features = ["server", "transport-io"] }
rusqlite = { version = "=0.39.0", features = ["bundled"] }
schemars = { version = "=1.2.1", features = ["derive"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tempfile = "=3.27.0"
thiserror = "=2.0.18"
tokio = { version = "=1.52.3", features = ["macros", "rt-multi-thread", "io-std", "signal"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
