[package]
name = "mcp-mail-bridge"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "=1.0.102"
base64 = "=0.22.1"
chrono = "=0.4.42"
clap = { version = "=4.6.1", features = ["derive"] }
crossterm = "=0.29.0"
inquire = "=0.9.4"
ratatui = { version = "=0.30.0", default-features = false, features = ["crossterm", "all-widgets"] }
reqwest = { version = "=0.12.15", features = ["blocking", "json", "rustls-tls"] }
rmcp = { version = "=1.7.0", features = ["server", "transport-io"] }
rusqlite = { version = "=0.39.0", features = ["bundled"] }
schemars = { version = "=1.2.1", features = ["derive"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
thiserror = "=2.0.18"
tokio = { version = "=1.52.3", features = ["macros", "rt-multi-thread", "io-std", "signal"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }

[dev-dependencies]
tempfile = "=3.27.0"
